- Added visual studio solution and project - Added more visual studio stuff to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,16 @@
 *.exe
 *.out
 *.app
+
+
+# Visual studio
+Debug
+ipch
+/Arkanoid.sdf
+ipch
+/Arkanoid/Release
+/Release
+/Arkanoid.VC.VC.opendb
+*.VC.db
+*.VC.opendb
+*.suo
