--- a/Arkanoid/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid/Arkanoid.vcxproj
@@ -151,7 +151,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AudioSystem.cpp" />
-    <ClCompile Include="BoundingBox2d.cpp" />
+    <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Rect2d.cpp" />
+    <ClCompile Include="Brick.cpp" />
     <ClCompile Include="EBall.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="EntityFactory.cpp" />
@@ -165,7 +167,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioSystem.h" />
-    <ClInclude Include="BoundingBox2d.h" />
+    <ClInclude Include="Board.h" />
+    <ClInclude Include="Rect2d.h" />
+    <ClInclude Include="Brick.h" />
     <ClInclude Include="EBall.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Entity.h" />
