--- a/Arkanoid/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid/Arkanoid.vcxproj
@@ -168,6 +168,7 @@
   <ItemGroup>
     <ClInclude Include="AudioSystem.h" />
     <ClInclude Include="Board.h" />
+    <ClInclude Include="Color.h" />
     <ClInclude Include="Rect2d.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="EBall.h" />
