--- a/Arkanoid/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid/Arkanoid.vcxproj
@@ -192,6 +192,10 @@
     <ClInclude Include="Walls.h" />
     <ClInclude Include="xorshift.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="Sounds\arkbrick.wav" />
+    <Media Include="Sounds\arkpad.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
