--- a/Arkanoid/Arkanoid/Arkanoid.vcxproj.filters
+++ b/Arkanoid/Arkanoid/Arkanoid.vcxproj.filters
@@ -121,4 +121,12 @@
       <Filter>Source\Entities</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="Sounds\arkbrick.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="Sounds\arkpad.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+  </ItemGroup>
 </Project>
