--- a/Arkanoid/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid/Arkanoid.vcxproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <ClCompile Include="AudioLoader.cpp" />
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Font.cpp" />
     <ClCompile Include="Rect2d.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="EBall.cpp" />
@@ -167,6 +168,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainScene.cpp" />
     <ClCompile Include="StartScene.cpp" />
+    <ClCompile Include="Text.cpp" />
     <ClCompile Include="Vector2.cpp" />
     <ClCompile Include="Walls.cpp" />
     <ClCompile Include="xorshift.cpp" />
@@ -175,6 +177,7 @@
     <ClInclude Include="AudioLoader.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="Font.h" />
     <ClInclude Include="Rect2d.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="EBall.h" />
@@ -190,6 +193,7 @@
     <ClInclude Include="NotSupportedException.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="StartScene.h" />
+    <ClInclude Include="Text.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="Walls.h" />
     <ClInclude Include="xorshift.h" />
