--- a/Arkanoid/Arkanoid/Arkanoid.vcxproj.filters
+++ b/Arkanoid/Arkanoid/Arkanoid.vcxproj.filters
@@ -147,4 +147,9 @@
       <Filter>Resource Files</Filter>
     </Media>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="Fonts\iomanoid.ttf">
+      <Filter>Resource Files</Filter>
+    </Font>
+  </ItemGroup>
 </Project>
