--- a/Arkanoid/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid/Arkanoid.vcxproj
@@ -22,32 +22,32 @@
     <ProjectGuid>{65701808-BD55-4BDA-9BE8-E8B23EF406FD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Arkanoid</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -77,8 +77,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Aram\Source\arkanoid\Arkanoid\ExternalDependencies\SDL2-2.0.5;C:\Users\Aram\Source\arkanoid\Arkanoid\ExternalDependencies\SDL2_ttf-2.0.14;C:\Users\Aram\Source\arkanoid\Arkanoid\ExternalDependencies\SDL2_mixer-2.0.1\include;C:\Users\Aram\Source\arkanoid\Arkanoid\ExternalDependencies\SDL2_gfx\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Aram\Source\arkanoid\Arkanoid\ExternalDependencies\SDL2_gfx\lib;C:\Users\Aram\Source\arkanoid\Arkanoid\ExternalDependencies\SDL2_mixer-2.0.1\lib\x86;C:\Users\Aram\Source\arkanoid\Arkanoid\ExternalDependencies\SDL2_ttf-2.0.14;C:\Users\Aram\Source\arkanoid\Arkanoid\ExternalDependencies\SDL2-2.0.5\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\dev\arkanoid\Arkanoid\ExternalDependencies\SDL2-2.0.5;C:\dev\arkanoid\Arkanoid\ExternalDependencies\SDL2_gfx\include;C:\dev\arkanoid\Arkanoid\ExternalDependencies\SDL2_mixer-2.0.1\include;C:\dev\arkanoid\Arkanoid\ExternalDependencies\SDL2_ttf-2.0.14;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\dev\arkanoid\Arkanoid\ExternalDependencies\SDL2_gfx\lib;C:\dev\arkanoid\Arkanoid\ExternalDependencies\SDL2-2.0.5\lib\x86;C:\dev\arkanoid\Arkanoid\ExternalDependencies\SDL2_ttf-2.0.14;C:\dev\arkanoid\Arkanoid\ExternalDependencies\SDL2_mixer-2.0.1\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -111,6 +111,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
